<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expo</string>
    <string name="title_activity_kiosk">Kiosk</string>
    <string name="action_settings">Settings</string>
    <string name="test_button">Test Me!</string>
    <string name="organization_name">SCCC</string>
    <string name="menu_mission">Mission: </string>
    <string name="menu_description">Description:</string>
    <string name="menu_office">Office Hours</string>
    <string name="office_hours">TestTestTestTest </string>
    <string name="mission">testtesttetesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttestesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttessttesttesttesttesttesttest</string>
    <string name="description">testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttestesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttestesttesttesttesttesttesttesttesttest</string>
    <string name="like">Like</string>
    <string name="calendar">Cal</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_temp">Temp</string>
    <string name="title_activity_event_page">EventPage</string>

</resources>