<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:padding="8sp"
		android:background="#158684">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:text="@string/organization_name"
		    android:textColor="#000"
		    android:textSize="18sp" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:textColor="#000" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_mission" 
			android:textSize="15sp"
			 />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:paddingBottom="5dp"
		    android:paddingTop="5dp"
		    android:text="@string/mission"
		    android:textColor="#000"
		    android:textSize="18sp" />

		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:gravity="center_vertical"
		    android:text="@string/menu_description"
		    android:textColor="#000"
		    android:textSize="15sp" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#000"
			android:text="@string/description" android:textSize="18sp"
			android:paddingTop="5sp" android:paddingBottom="5sp" />

		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="30dp"
		    android:gravity="center_vertical"
		    android:text="@string/menu_office"
		    android:textColor="#000"
		    android:textSize="15sp" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:paddingBottom="5dp"
		    android:paddingTop="5dp"
		    android:text="@string/office_hours"
		    android:textColor="#000"
		    android:textSize="18sp" />
		
		</LinearLayout>
</ScrollView>